# python-muenster

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  test_output.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linting.yaml  release.yaml  stale.yaml  tests.yaml  tweet-release.yaml  typing.yaml
examples/: garages.py
muenster/: __init__.py  exceptions.py  models.py  muenster.py
src/muenster/: __init__.py  exceptions.py  models.py  muenster.py
tests/: __init__.py  conftest.py  test_models.py  test_odp_muenster.py  test_stadt_muenster.py
tests/__snapshots__/: test_models.ambr
tests/fixtures/: garages.json
